# rustcpp

./: .gitignore  Cargo.toml  _build.rs  wrapper.h
cpp/: CMakeLists.txt
cpp/include/: rustoxide.hpp
cpp/src/: main.cpp  rustoxide.cpp
src/: main.rs  triple.cpp
