[package]
name = "rustcpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cxx = { version = "1.0.86", features = ["c++17"] }
libc = "0.2"

[build-dependencies]
cxx-build = "1.0"
bindgen = "0.63"
cc ="1.0"